Upate tab bar styling

--- a/src/frontend/admin/admin-options.scss
+++ b/src/frontend/admin/admin-options.scss
@@ -15,281 +15,217 @@ $grey_medium: #999;
   #{$property}: #{$value};
 }
 
-#tabs h2 {
-	font-size: 23px;
-	line-height: 29px;
-}
-
 p.notice {
-	padding: 0 10px;
-}
-
-.ui-tabs .update-posts.notice {
-	background: none;
-	box-shadow: none;
-	border-left-color: transparent;
-	margin-left: 0;
-	padding-left: 0;
-	border-left: 0;
+  padding: 0 10px;
 }
 
 .update-posts {
-	&.notice {
-		position: relative;
-		top: -14px;
-		border: 0;
-		margin-left: 0;
-		padding-left: 0;
-		background: none;
-		box-shadow: none;
-		form {
-			display: inline;
-			width: initial;
-			float: left;
-		}
-	}
-	&.updated {
-		margin-top: 20px;
-		margin-left: 0;
-	}
+  &.notice {
+    display: flex;
+    position: relative;
+    top: -14px;
+    border: 0;
+    margin-left: 0;
+    padding-left: 0;
+    background: none;
+    box-shadow: none;
+  }
+  &.updated {
+    margin-top: 20px;
+    margin-left: 0;
+  }
 }
 
 .help {
-	float: left;
-	.info-icon {
-		@include vendor-prefix( border-radius, 50% );
-		border: 1px solid $grey_light;
-		width: 16px;
-		height: 16px;
-		line-height: 16px;
-		display: inline-block;
-		text-align: center;
-		font-weight: normal;
-		color: $grey_light;
-		font-size: 13px;
-		margin: 5px 0 5px 10px;
-		padding-left: 1px;
-		&:hover {
-			border-color: $grey_medium;
-			color: $grey_medium;
-		}
-	}
+  float: left;
+  .info-icon {
+    @include vendor-prefix(border-radius, 50%);
+    border: 1px solid $grey_light;
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+    display: inline-block;
+    text-align: center;
+    font-weight: normal;
+    color: $grey_light;
+    font-size: 13px;
+    margin: 5px 0 5px 10px;
+    padding-left: 1px;
+    &:hover {
+      border-color: $grey_medium;
+      color: $grey_medium;
+    }
+  }
 }
 
-.ui-tabs-nav {
-	border-bottom: 1px solid #ccc;
-	height: 27px;
-	margin: 20px 0;
-	padding: 0;
-	clear: left;
+.nav-tab {
+  margin-bottom: -1px;
+  padding: 0;
 }
 
-.ui-tabs-nav li {
-	display: block;
-	float: left;
-	margin: 0;
-}
+.nav-tab a {
+  color: #000;
+  display: inline-block;
+  padding: 5px 10px;
+  text-decoration: none;
 
-.ui-tabs-nav li a {
-	padding: 4px 20px 6px;
-	font-weight: bold;
-	background: #DFDFDF;
-	background: linear-gradient(0deg, rgba(223,223,223,1) 0%, rgba(236,236,236,1) 100%);
-	text-shadow: 0 1px 0 #FFFFFF;
-}
-
-.ui-tabs-nav li a {
-	color: #C1C1C1;
-	text-shadow: rgba(255, 255, 255, 1) 0 1px 0;
-	display: inline-block;
-	padding: 4px 14px 6px;
-	text-decoration: none;
-	margin: 0 6px -1px 0;
-	outline: none;
-	-moz-border-radius: 5px 5px 0 0;
-	-webkit-border-top-left-radius: 5px;
-	-webkit-border-top-right-radius: 5px;
-	-khtml-border-top-left-radius: 5px;
-	-khtml-border-top-right-radius: 5px;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
-	&:hover {
-		color: #464646;
-	}
-}
-
-.ui-tabs-nav li.ui-tabs-selected a,
-.ui-tabs-nav li.ui-state-active a {
-	color: #464646;
+  &:focus {
+    box-shadow: none;
+    outline: 0;
+  }
 }
 
 .ui-tabs-panel {
-	clear: both;
+  clear: both;
 }
 
 .ui-tabs-panel h3 {
-	font: italic normal normal 24px/29px Georgia,"Times New Roman","Bitstream Charter",Times,serif;
-	margin: 0;
-	padding: 0 10px 5px;
-	line-height: 35px;
-	text-shadow: 0 1px 0 #fff;
+  font: italic normal normal 24px/29px Georgia, "Times New Roman",
+    "Bitstream Charter", Times, serif;
+  margin: 10px 0 0;
+  line-height: 35px;
+  text-shadow: 0 1px 0 #fff;
 }
 
 .ui-tabs-panel h4 {
-	font-size: 15px;
-	font-weight: bold;
-	margin: 1em 0;
+  font-size: 15px;
+  font-weight: bold;
+  margin: 1em 0;
 }
 
-.wrap h3, .wrap table {
-	display: none;
+.wrap h3,
+.wrap table {
+  display: none;
 }
 
 #content {
-	min-width:910px;
+  min-width: 910px;
 }
 table {
-	border-top:2px solid #ccc;
+  border-top: 2px solid #ccc;
 }
 
 tr {
-	border-bottom: 1px solid #ddd;
-	border-top: 1px solid #fff;
+  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #fff;
 }
 
 form {
-	width: 720px;
-	max-width: 100%;
-	float: left;
-	clear: both;
+  max-width: 720px;
 }
 
 .button {
-	min-width: 110px;
+  min-width: 110px;
 }
 
 th label {
-	font-size: 12px;
-	font-weight: 700;
+  font-size: 12px;
+  font-weight: 700;
 }
 
 td label {
-	color:#666;
+  color: #666;
 }
 
 span.thin {
-	font-weight:400;
+  font-weight: 400;
 }
 
 textarea {
-	width:100%;
+  width: 100%;
 }
 
 input.regular-text {
-	width:100%;
+  width: 100%;
 }
 
 #reset label {
-	color:#000;
+  color: #000;
 }
 
 #floatleft {
-	float:left;
+  float: left;
 }
 
 #informations {
-	margin: 20px 0 10px 10px;
-	width: 170px;
- 	border-color: #ddd;
-	border-radius: 5px;
-	border-style: solid;
-	border-width: 1px;
+  margin: 20px 0 10px 10px;
+  width: 170px;
+  border-color: #ddd;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
 }
 
 #informations #titel {
-	background: #DFDFDF;
-	background: linear-gradient(0deg, rgba(223,223,223,1) 0%, rgba(236,236,236,1) 100%);
-	border-bottom: 1px solid #ddd;
-	text-shadow: 0 1px 0 #fff;
-	padding:5px;
-	text-align:center;
+  background: #dfdfdf;
+  background: linear-gradient(
+    0deg,
+    rgba(223, 223, 223, 1) 0%,
+    rgba(236, 236, 236, 1) 100%
+  );
+  border-bottom: 1px solid #ddd;
+  text-shadow: 0 1px 0 #fff;
+  padding: 5px;
+  text-align: center;
 }
 
 #informations #text {
-	padding:5px;
-	text-align:center;
+  padding: 5px;
+  text-align: center;
 }
 
 #informations #text img.profilpic {
-	float:right;
-	width:38px;
-	height:50px;
+  float: right;
+  width: 38px;
+  height: 50px;
 }
 #informations #text li {
-	text-align:left;
-	border-bottom:1px solid #ddd;
-	margin-bottom:4px;
-	padding-bottom:2px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 4px;
+  padding-bottom: 2px;
 }
 
 #informations #text li.center {
-	text-align:center;
+  text-align: center;
 }
 
 .newred {
-	color: red;
-	display: block;
-	margin-top: 3px;
+  color: red;
+  display: block;
+  margin-top: 3px;
 }
-.newred_dot{
-	color: red;
-	position: relative;
-	left: 3px;
+.newred_dot {
+  color: red;
+  position: relative;
+  left: 3px;
 }
 .orange {
-	color: #f90;
+  color: #f90;
 }
 
 #mc_embed_signup {
-	clear: both;
+  clear: both;
 }
 
 #mc_embed_signup label {
-	color: green;
-	line-height: 2.5em;
+  color: green;
+  line-height: 2.5em;
 }
 .mc-field-group.updated {
-	padding: 1.5em;
-	margin: 0 0 1.5em;
+  padding: 1.5em;
+  margin: 0 0 1.5em;
 }
 
-.pickerstyle{
-	display:inline-block;
-	float:left;
+.pickerstyle {
+  display: inline-block;
+  float: left;
 }
 
 .label-radio {
-	margin-right: 20px;
-}
-
-.ui-tabs-nav li {
-	a.tab-green {
-		color: #91bd09;
-	}
-	a.tab-orange {
-		color: #f90;
-	}
-	&.ui-state-hover a.tab-green, &.ui-state-active a.tab-green,
-	&.ui-state-hover a.tab-orange, &.ui-state-active a.tab-orange {
-		color: #464646;
-	}
+  margin-right: 20px;
 }
 
 .clear-both {
-	clear: both;
-}
-
-// Remove bottom margin on "new" tabs
-li.nav-tab {
-  margin-bottom: 0;
+  clear: both;
 }
